--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.20.6",
+    "axios": "^1.7.7",
+    "firebase": "^10.13.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.2",
-    "sort-by": "^1.2.0"
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^10.0.5",
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.0",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
