--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ VITE_MSG_SENDER_ID=402386203019
 VITE_APP_ID=1:402386203019:web:6c5829a8d79558e6403f8e
 
 VITE_API_URL=http://localhost:3052/api
+
+VITE_IMAGE_HOST_API_KEY=15dab3ed1101b9fcc2597dc2df4e8ea7
+VITE_IMAGE_HOST_API_URL=https://api.imgbb.com/1/upload
+
+
+
