--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@tanstack/react-query": "^5.56.2",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tanstack/eslint-plugin-query": "^5.58.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
