--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.56.2",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
+    "dateformat": "^5.0.3",
     "firebase": "^10.13.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
