--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.26.2",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.0",
     "sweetalert2-react-content": "^5.0.7"
